--- a/index.html
+++ b/index.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Empresa - Inicio</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="icon" href="assets/images/icono/icono.ico" type="image/x-icon">
 </head>
+
 <body>
-    <h1>EL título mas importante</h1>
-    <h2>El segundo título</h2>
-    <h3>El tercer título</h3>
-    <p>soy un parrafo</p>
-    <p>holaaaa soy un parrafo</p>
-    <p>holaaaa soy un parrafo2222222</p>
-    <ul>
-        <li>
-            item1
-        </li>  
-        <li>
-            item2
-        </li> 
-        <li>
-            item3
-        </li> 
-        <li>
-            item4
-        </li> 
-        <li>
-            item5
-        </li>     
 
+<header>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="activo">Inicio</a></li>
+            <li><a href="secciones/productos.html">Productos</a></li>
+            <li><a href="secciones/presupuesto.html">Presupuesto</a></li>
+            <li><a href="secciones/contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
 
+<section class="seccion">
+    <h1>Bienvenidos a Mi Empresa</h1>
+    <p>Somos expertos en ofrecer servicios de calidad.</p>
+</section>
 
-    </ul>
+<section class="seccion">
+    <h2>Nuestros Servicios</h2>
+    <p>Soluciones profesionales adaptadas a tus necesidades.</p>
+</section>
+
+<section class="seccion">
+    <h2>Por qué elegirnos</h2>
+    <p>Calidad, rapidez y atención personalizada.</p>
+</section>
+
+<footer>
+    <div class="redes">
+        <a href="https://www.facebook.com" target="_blank" rel="noopener">
+            <img src="assets/images/redes/facebook.png" alt="Facebook">
+        </a>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener">
+            <img src="assets/images/redes/twitter.png" alt="Twitter">
+        </a>
+        <a href="https://www.instagram.com" target="_blank" rel="noopener">
+            <img src="assets/images/redes/instagram.png" alt="Instagram">
+        </a>
+    </div>
+
+    <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
+
+    <p><a href="secciones/aviso-legal.html">Aviso legal</a></p>
+</footer>
+
 </body>
 </html>
