--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,13 +5,12 @@
     <title>Mi Empresa - Productos</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="icon" href="../assets/images/icono/icono.ico" type="image/x-icon">
-
 </head>
 
 <body>
 
 <header>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="productos.html" class="activo">Productos</a></li>
@@ -19,7 +18,12 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <div class="logo-container">
+        <img src="../assets/images/logo.png" alt="Logo de Mi Empresa">
+    </div>
 </header>
+
+
 
 <h1 style="text-align:center; margin-top:20px;">Nuestros Productos</h1>
 
@@ -33,19 +37,19 @@
 <footer>
     <div class="redes">
         <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/facebook.png" alt="Facebook">
+            <img src="/assets/images/redes/facebook.png" alt="Facebook">
         </a>
         <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/twitter.png" alt="Twitter">
+            <img src="/assets/images/redes/twitter.png" alt="Twitter">
         </a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/instagram.png" alt="Instagram">
+            <img src="/assets/images/redes/instagram.png" alt="Instagram">
         </a>
     </div>
 
     <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
 
-    <p><a href="aviso-legal.html">Aviso legal</a></p>
+    <p><a href="/secciones/aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 
