--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Mi Empresa - Inicio</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css"> 
     <link rel="icon" href="assets/images/icono/icono.ico" type="image/x-icon">
 </head>
 
 <body>
 
 <header>
-    <nav>
+    <nav class="menu">
         <ul>
-            <li><a href="index.html" class="activo">Inicio</a></li>
-            <li><a href="secciones/productos.html">Productos</a></li>
-            <li><a href="secciones/presupuesto.html">Presupuesto</a></li>
-            <li><a href="secciones/contacto.html">Contacto</a></li>
+            <li><a href="/index.html" class="activo">Inicio</a></li>
+            <li><a href="/secciones/productos.html">Productos</a></li>
+            <li><a href="/secciones/presupuesto.html">Presupuesto</a></li>
+            <li><a href="/secciones/contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <div class="logo-container">
+        <img src="/assets/images/logo.png" alt="Logo de Mi Empresa">
+    </div>
 </header>
 
 <section class="seccion">
-    <h1>Bienvenidos a Mi Empresa</h1>
-    <p>Somos expertos en ofrecer servicios de calidad.</p>
+    <h1>Bienvenidos a ElectroRubí</h1>
+    <p>Somos expertos en ofrecer servicios en electrónica en general.</p>
 </section>
 
 <section class="seccion">
@@ -38,19 +41,19 @@
 <footer>
     <div class="redes">
         <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="assets/images/redes/facebook.png" alt="Facebook">
+            <img src="/assets/images/redes/facebook.png" alt="Facebook">
         </a>
         <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="assets/images/redes/twitter.png" alt="Twitter">
+            <img src="/assets/images/redes/twitter.png" alt="Twitter">
         </a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="assets/images/redes/instagram.png" alt="Instagram">
+            <img src="/assets/images/redes/instagram.png" alt="Instagram">
         </a>
     </div>
 
     <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
 
-    <p><a href="secciones/aviso-legal.html">Aviso legal</a></p>
+    <p><a href="/secciones/aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 </body>
