--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,13 +5,12 @@
     <title>Contacto</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="icon" href="../assets/images/icono/icono.ico" type="image/x-icon">
-
 </head>
 
 <body>
 
 <header>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
@@ -19,33 +18,38 @@
             <li><a href="contacto.html" class="activo">Contacto</a></li>
         </ul>
     </nav>
+    <div class="logo-container">
+        <img src="../assets/images/logo.png" alt="Logo de Mi Empresa">
+    </div>
 </header>
+
+
 
 <h1 style="text-align:center; margin-top:20px;">Contacto</h1>
 
 <section class="seccion">
     <h2>Ubicación de la empresa</h2>
     <img src="../assets/images/mapa.png" style="width:70%; border-radius:10px;">
-    <p>Dirección: Calle Ejemplo, Nº 123, Madrid</p>
-    <p>Teléfono: 900 123 456</p>
+    <p>Dirección: Calle Sant Jordi, Nº 23, Rubí, Barcelona - 08191</p>
+    <p>Teléfono: 624082186</p>
 </section>
 
 <footer>
     <div class="redes">
         <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/facebook.png" alt="Facebook">
+            <img src="/assets/images/redes/facebook.png" alt="Facebook">
         </a>
         <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/twitter.png" alt="Twitter">
+            <img src="/assets/images/redes/twitter.png" alt="Twitter">
         </a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/instagram.png" alt="Instagram">
+            <img src="/assets/images/redes/instagram.png" alt="Instagram">
         </a>
     </div>
 
     <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
 
-    <p><a href="aviso-legal.html">Aviso legal</a></p>
+    <p><a href="/secciones/aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 
