--- a/secciones/presupuesto.html
+++ b/secciones/presupuesto.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
@@ -19,7 +19,13 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <div class="logo-container">
+        <img src="../assets/images/logo.png" alt="Logo de Mi Empresa">
+    </div>
 </header>
+
+
+
 
 <h1 style="text-align:center; margin-top:20px;">Solicitar Presupuesto</h1>
 
@@ -47,19 +53,19 @@
 <footer>
     <div class="redes">
         <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/facebook.png" alt="Facebook">
+            <img src="/assets/images/redes/facebook.png" alt="Facebook">
         </a>
         <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/twitter.png" alt="Twitter">
+            <img src="/assets/images/redes/twitter.png" alt="Twitter">
         </a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/instagram.png" alt="Instagram">
+            <img src="/assets/images/redes/instagram.png" alt="Instagram">
         </a>
     </div>
 
     <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
 
-    <p><a href="aviso-legal.html">Aviso legal</a></p>
+    <p><a href="/secciones/aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 
