--- a/secciones/presupuesto.html
+++ b/secciones/presupuesto.html
@@ -53,13 +53,13 @@
 <footer>
     <div class="redes">
         <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="/assets/images/redes/facebook.png" alt="Facebook">
+            <img src="../assets/images/redes/facebook.png" alt="Facebook">
         </a>
         <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="/assets/images/redes/twitter.png" alt="Twitter">
+            <img src="../assets/images/redes/twitter.png" alt="Twitter">
         </a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="/assets/images/redes/instagram.png" alt="Instagram">
+            <img src="../assets/images/redes/instagram.png" alt="Instagram">
         </a>
     </div>
 
