--- a/secciones/presupuesto.html
+++ b/secciones/presupuesto.html
@@ -65,7 +65,7 @@
 
     <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
 
-    <p><a href="/secciones/aviso-legal.html">Aviso legal</a></p>
+    <p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 
