--- a/secciones/aviso-legal.html
+++ b/secciones/aviso-legal.html
@@ -70,7 +70,7 @@
 
     <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
 
-    <p><a href="/secciones/aviso-legal.html">Aviso legal</a></p>
+    <p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 </body>
