--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </a>
     </div>
 
-    <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
+    <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
 
     <p><a href="secciones/aviso-legal.html">Aviso legal</a></p>
 </footer>
