--- a/secciones/presupuesto.html
+++ b/secciones/presupuesto.html
@@ -63,7 +63,7 @@
         </a>
     </div>
 
-    <p>Av. Siempre Viva 123, Ciudad Ejemplo</p>
+    <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
 
     <p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
