--- a/secciones/aviso-legal.html
+++ b/secciones/aviso-legal.html
@@ -1,76 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Aviso Legal</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+<meta charset="UTF-8">
+<title>ElectroRubí - Aviso Legal</title>
+<link rel="stylesheet" href="../css/estilos.css">
 </head>
-
 <body>
 
 <header>
-    <nav class="menu">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="presupuesto.html">Presupuesto</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    <div class="logo-container">
-        <img src="../assets/images/logo.png" alt="Logo de Mi Empresa">
-    </div>
+<nav class="menu">
+    <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="presupuesto.html">Presupuesto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+    </ul>
+</nav>
+<div class="logo-container"><img src="../assets/images/logo.png" alt="Logo ElectroRubí"></div>
 </header>
 
-
-
-<main>
-    <section>
-        <h2>1. Datos de la Empresa</h2>
-        <p>Nombre de la empresa: Mi Empresa S.L.<br>
-            Dirección: Av. Siempre Viva 123, Ciudad Ejemplo<br>
-            Teléfono: 000 000 000<br>
-            Email: info@miempresa.com
-        </p>
-    </section>
-
-    <section>
-        <h2>2. Propiedad Intelectual</h2>
-        <p>Todos los contenidos de esta página web, incluyendo textos, imágenes, logotipos y diseño, están protegidos por derechos de propiedad intelectual. Queda prohibida su reproducción total o parcial sin autorización expresa.</p>
-    </section>
-
-    <section>
-        <h2>3. Protección de Datos</h2>
-        <p>La empresa cumple con la normativa vigente de protección de datos. La información personal recogida será tratada con confidencialidad y no se compartirá con terceros salvo obligación legal.</p>
-    </section>
-
-    <section>
-        <h2>4. Responsabilidad</h2>
-        <p>La empresa no se hace responsable del mal uso de la información publicada en este sitio, ni de daños derivados del acceso o uso de la web.</p>
-    </section>
-
-    <section>
-        <h2>5. Enlaces Externos</h2>
-        <p>Esta web puede contener enlaces a sitios externos. La empresa no se hace responsable del contenido ni políticas de dichos sitios.</p>
-    </section>
-</main>
+<section class="seccion">
+<h1>Aviso Legal</h1>
+<p>Todos los contenidos de este sitio web son propiedad de ElectroRubí S.L. Queda prohibida su reproducción sin autorización. Cumplimos con la normativa vigente de protección de datos y privacidad.</p>
+</section>
 
 <footer>
-    <div class="redes">
-        <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/facebook.png" alt="Facebook">
-        </a>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/twitter.png" alt="Twitter">
-        </a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/instagram.png" alt="Instagram">
-        </a>
-    </div>
-
-    <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
-
-    <p><a href="aviso-legal.html">Aviso legal</a></p>
+<div class="redes">
+    <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
+    <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
+    <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
+</div>
+<p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
+<p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 </body>
