--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -1,58 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Contacto</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../assets/images/icono/icono.ico" type="image/x-icon">
+<meta charset="UTF-8">
+<title>ElectroRubí - Contacto</title>
+<link rel="stylesheet" href="../css/estilos.css">
+<link rel="icon" href="../assets/images/icono.ico" type="image/x-icon">
 </head>
-
 <body>
 
 <header>
-    <nav class="menu">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="presupuesto.html">Presupuesto</a></li>
-            <li><a href="contacto.html" class="activo">Contacto</a></li>
-        </ul>
-    </nav>
-    <div class="logo-container">
-        <img src="../assets/images/logo.png" alt="Logo de Mi Empresa">
-    </div>
+<nav class="menu">
+    <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="presupuesto.html">Presupuesto</a></li>
+        <li><a href="contacto.html" class="activo">Contacto</a></li>
+    </ul>
+</nav>
+<div class="logo-container">
+    <img src="../assets/images/logo.png" alt="Logo ElectroRubí">
+</div>
 </header>
 
-
-
-<h1 style="text-align:center; margin-top:20px;">Contacto</h1>
-
 <section class="seccion">
+    <h1>Contacto</h1>
     <h2>Ubicación de la empresa</h2>
-    <img src="../assets/images/mapa.png" style="width:70%; border-radius:10px;">
+    <!-- Mapa interactivo embebido -->
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.0000000000!2d2.0000000000!3d41.483333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2sCalle+Sant+Jordi%2C+Rub%C3%AD!5e0!3m2!1ses!2ses!4v1700000000000!5m2!1ses!2ses" 
+        width="70%" height="400" style="border:0; border-radius:10px; margin:20px 0;" allowfullscreen="" loading="lazy"></iframe>
     <p>Dirección: Calle Sant Jordi, Nº 23, Rubí, Barcelona - 08191</p>
     <p>Teléfono: 624082186</p>
+    <p>Email: info@electrorubi.com</p>
 </section>
 
 <footer>
-    <div class="redes">
-        <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/facebook.png" alt="Facebook">
-        </a>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/twitter.png" alt="Twitter">
-        </a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/instagram.png" alt="Instagram">
-        </a>
-    </div>
-
-    <p>Calle Sant Jordi, Rubí, Barcelona - 08191/p>
-
-    <p><a href="aviso-legal.html">Aviso legal</a></p>
+<div class="redes">
+    <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
+    <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
+    <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
+</div>
+<p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
+<p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
-
-
 
 </body>
 </html>
