--- a/secciones/presupuesto.html
+++ b/secciones/presupuesto.html
@@ -1,73 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Solicitar Presupuesto</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../assets/images/icono/icono.ico" type="image/x-icon">
-
+<meta charset="UTF-8">
+<title>ElectroRubí - Presupuesto</title>
+<link rel="stylesheet" href="../css/estilos.css">
 </head>
-
 <body>
 
 <header>
-    <nav class="menu">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="presupuesto.html" class="activo">Presupuesto</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    <div class="logo-container">
-        <img src="../assets/images/logo.png" alt="Logo de Mi Empresa">
-    </div>
+<nav class="menu">
+    <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="presupuesto.html" class="activo">Presupuesto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+    </ul>
+</nav>
+<div class="logo-container"><img src="../assets/images/logo.png" alt="Logo ElectroRubí"></div>
 </header>
 
-
-
-
-<h1 style="text-align:center; margin-top:20px;">Solicitar Presupuesto</h1>
-
+<section class="seccion">
+<h1>Solicitar Presupuesto</h1>
 <form>
     <label>Nombre:</label>
     <input type="text" required>
-
     <label>Email:</label>
     <input type="email" required>
-
     <label>Teléfono:</label>
     <input type="tel" required pattern="[0-9]{9}">
-
-    <label>Solicite más información:</label>
+    <label>Detalle del pedido:</label>
     <textarea rows="5" required></textarea>
-
-    <label>
-        <input type="checkbox" required>
-        Acepto la Política de privacidad
-    </label>
-
+    <label><input type="checkbox" required> Acepto la Política de privacidad</label>
     <button type="submit">Enviar</button>
 </form>
+</section>
 
 <footer>
-    <div class="redes">
-        <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/facebook.png" alt="Facebook">
-        </a>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/twitter.png" alt="Twitter">
-        </a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/instagram.png" alt="Instagram">
-        </a>
-    </div>
-
-    <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
-
-    <p><a href="aviso-legal.html">Aviso legal</a></p>
+<div class="redes">
+    <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
+    <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
+    <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
+</div>
+<p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
+<p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
-
 
 </body>
 </html>
