--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -1,57 +1,153 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Mi Empresa - Productos</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="../assets/images/icono/icono.ico" type="image/x-icon">
+<meta charset="UTF-8">
+<title>ElectroRubí - Productos</title>
+<link rel="stylesheet" href="../css/estilos.css">
+<link rel="icon" href="../assets/images/icono.ico" type="image/x-icon">
 </head>
-
 <body>
 
 <header>
-    <nav class="menu">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos.html" class="activo">Productos</a></li>
-            <li><a href="presupuesto.html">Presupuesto</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    <div class="logo-container">
-        <img src="../assets/images/logo.png" alt="Logo de Mi Empresa">
-    </div>
+<nav class="menu">
+    <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="productos.html" class="activo">Productos</a></li>
+        <li><a href="presupuesto.html">Presupuesto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+    </ul>
+</nav>
+<div class="logo-container"><img src="../assets/images/logo.png" alt="Logo ElectroRubí"></div>
 </header>
 
+<section class="seccion">
+    <h1>Nuestros Productos</h1>
+    <div class="productos-grid">
+        <!-- Producto 1 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto1.jpg" alt="Resistencia 220 Ohm">
+            <h3>Resistencia 220 Ohm</h3>
+            <p>Alta precisión para tus proyectos electrónicos.</p>
+            <div class="precio">€0,50</div>
+        </div>
+        <!-- Producto 2 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto2.jpg" alt="Condensador 10uF">
+            <h3>Condensador 10uF</h3>
+            <p>Ideal para filtrado de corriente y estabilidad.</p>
+            <div class="precio">€0,75</div>
+        </div>
+        <!-- Producto 3 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto3.jpg" alt="Placa Arduino Uno">
+            <h3>Arduino Uno</h3>
+            <p>Microcontrolador ideal para prototipos y educación.</p>
+            <div class="precio">€20,00</div>
+        </div>
+        <!-- Producto 4 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto4.jpg" alt="Sensor de temperatura">
+            <h3>Sensor de temperatura</h3>
+            <p>Preciso y fiable para tus proyectos de medición.</p>
+            <div class="precio">€5,50</div>
+        </div>
+        <!-- Producto 5 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto5.jpg" alt="LED rojo 5mm">
+            <h3>LED rojo 5mm</h3>
+            <p>Brillo intenso, ideal para indicadores.</p>
+            <div class="precio">€0,30</div>
+        </div>
+        <!-- Producto 6 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto6.jpg" alt="Potenciómetro 10k">
+            <h3>Potenciómetro 10k</h3>
+            <p>Regula voltaje y corriente con precisión.</p>
+            <div class="precio">€1,20</div>
+        </div>
+        <!-- Producto 7 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto7.jpg" alt="Placa Raspberry Pi 4">
+            <h3>Raspberry Pi 4</h3>
+            <p>Mini computadora para proyectos avanzados.</p>
+            <div class="precio">€50,00</div>
+        </div>
+        <!-- Producto 8 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto8.jpg" alt="Motor DC 12V">
+            <h3>Motor DC 12V</h3>
+            <p>Potente y confiable para robótica y automatización.</p>
+            <div class="precio">€7,50</div>
+        </div>
+        <!-- Producto 9 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto9.jpg" alt="Transistor NPN">
+            <h3>Transistor NPN</h3>
+            <p>Control de corriente y amplificación de señales.</p>
+            <div class="precio">€0,40</div>
+        </div>
+        <!-- Producto 10 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto10.jpg" alt="Diodo 1N4007">
+            <h3>Diodo 1N4007</h3>
+            <p>Protección y rectificación de corriente.</p>
+            <div class="precio">€0,25</div>
+        </div>
+        <!-- Producto 11 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto11.jpg" alt="Pantalla LCD 16x2">
+            <h3>Pantalla LCD 16x2</h3>
+            <p>Visualiza datos fácilmente en tus proyectos.</p>
+            <div class="precio">€3,50</div>
+        </div>
+        <!-- Producto 12 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto12.jpg" alt="Sensor ultrasonico HC-SR04">
+            <h3>Sensor ultrasonico HC-SR04</h3>
+            <p>Medición de distancia precisa y confiable.</p>
+            <div class="precio">€2,00</div>
+        </div>
+        <!-- Producto 13 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto13.jpg" alt="Modulo relé 5V">
+            <h3>Modulo relé 5V</h3>
+            <p>Controla dispositivos de alta corriente con seguridad.</p>
+            <div class="precio">€3,00</div>
+        </div>
+        <!-- Producto 14 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto14.jpg" alt="Fuente de alimentación 12V">
+            <h3>Fuente de alimentación 12V</h3>
+            <p>Provee energía estable a tus proyectos.</p>
+            <div class="precio">€12,00</div>
+        </div>
+        <!-- Producto 15 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto15.jpg" alt="Protoboard">
+            <h3>Protoboard</h3>
+            <p>Ideal para montar y probar circuitos sin soldadura.</p>
+            <div class="precio">€4,00</div>
+        </div>
+        <!-- Producto 16 -->
+        <div class="producto-card">
+            <img src="../assets/images/producto16.jpg" alt="Cable Dupont">
+            <h3>Cable Dupont</h3>
+            <p>Para conexiones rápidas y confiables en prototipos.</p>
+            <div class="precio">€0,10</div>
+        </div>
+    </div>
+</section>
 
-
-<h1 style="text-align:center; margin-top:20px;">Nuestros Productos</h1>
-
-<div class="galeria">
-    <img src="../assets/images/producto1.jpg">
-    <img src="../assets/images/producto2.jpg">
-    <img src="../assets/images/producto3.jpg">
-    <img src="../assets/images/producto4.jpg">
-</div>
 
 <footer>
-    <div class="redes">
-        <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/facebook.png" alt="Facebook">
-        </a>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/twitter.png" alt="Twitter">
-        </a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="../assets/images/redes/instagram.png" alt="Instagram">
-        </a>
-    </div>
-
-    <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
-
-    <p><a href="aviso-legal.html">Aviso legal</a></p>
+<div class="redes">
+    <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
+    <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
+    <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
+</div>
+<p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
+<p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
-
 
 </body>
 </html>
