--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Mi Empresa - Inicio</title>
-    <link rel="stylesheet" href="css/estilos.css"> 
-    <link rel="icon" href="assets/images/icono/icono.ico" type="image/x-icon">
+<meta charset="UTF-8">
+<title>ElectroRubí - Inicio</title>
+<link rel="stylesheet" href="css/estilos.css">
+<link rel="icon" href="assets/images/icono.ico" type="image/x-icon">
 </head>
-
 <body>
 
 <header>
@@ -18,41 +17,31 @@
             <li><a href="secciones/contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <div class="logo-container">
-        <img src="assets/images/logo.png" alt="Logo de Mi Empresa">
-    </div>
+    <div class="logo-container"><img src="assets/images/logo.png" alt="Logo ElectroRubí"></div>
 </header>
 
 <section class="seccion">
-    <h1>Bienvenidos a ElectroRubí</h1>
-    <p>Somos expertos en ofrecer servicios en electrónica en general.</p>
+    <h1>Bienvenido a ElectroRubí</h1>
+    <p>Tu tienda de componentes electrónicos y servicio técnico especializado.</p>
 </section>
 
 <section class="seccion">
     <h2>Nuestros Servicios</h2>
-    <p>Soluciones profesionales adaptadas a tus necesidades.</p>
+    <p>Venta de componentes, kits, placas y reparación de circuitos electrónicos.</p>
 </section>
 
 <section class="seccion">
     <h2>Por qué elegirnos</h2>
-    <p>Calidad, rapidez y atención personalizada.</p>
+    <p>Atención personalizada, productos originales y soluciones profesionales.</p>
 </section>
 
 <footer>
     <div class="redes">
-        <a href="https://www.facebook.com" target="_blank" rel="noopener">
-            <img src="assets/images/redes/facebook.png" alt="Facebook">
-        </a>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener">
-            <img src="assets/images/redes/twitter.png" alt="Twitter">
-        </a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <img src="assets/images/redes/instagram.png" alt="Instagram">
-        </a>
+        <a href="#"><img src="assets/images/redes/facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="assets/images/redes/twitter.png" alt="Twitter"></a>
+        <a href="#"><img src="assets/images/redes/instagram.png" alt="Instagram"></a>
     </div>
-
     <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
-
     <p><a href="secciones/aviso-legal.html">Aviso legal</a></p>
 </footer>
 
