--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>ElectroRubí - Productos</title>
 <link rel="stylesheet" href="../css/estilos.css">
-<link rel="icon" href="../assets/images/icono.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="32x32" href="../assets/images/icono/favicon-32x32.png">
 </head>
 <body>
 
