--- a/secciones/aviso-legal.html
+++ b/secciones/aviso-legal.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>ElectroRubí - Aviso Legal</title>
 <link rel="stylesheet" href="../css/estilos.css">
+<link rel="icon" type="image/png" sizes="32x32" href="../assets/images/icono/favicon-32x32.png">
 </head>
 <body>
 
