mdifacion de anchos

--- a/index.html
+++ b/index.html
@@ -17,22 +17,27 @@
             <li><a href="secciones/contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <div class="logo-container"><img src="assets/images/logo.png" alt="Logo ElectroRubí"></div>
+    <div class="logo-container">
+        <img src="assets/images/logo.png" alt="Logo ElectroRubí">
+    </div>
 </header>
 
 <section class="seccion">
     <h1>Bienvenido a ElectroRubí</h1>
     <p>Tu tienda de componentes electrónicos y servicio técnico especializado.</p>
+    <a href="secciones/productos.html" class="btn">Ver Productos</a>
 </section>
 
 <section class="seccion">
     <h2>Nuestros Servicios</h2>
-    <p>Venta de componentes, kits, placas y reparación de circuitos electrónicos.</p>
+    <p>Venta de componentes, kits, placas y reparación de circuitos electrónicos. Contamos con atención personalizada para que encuentres justo lo que necesitas.</p>
+    <a href="secciones/contacto.html" class="btn">Contactar Ahora</a>
 </section>
 
 <section class="seccion">
     <h2>Por qué elegirnos</h2>
-    <p>Atención personalizada, productos originales y soluciones profesionales.</p>
+    <p>Ofrecemos productos originales, soluciones profesionales y garantía en todos nuestros servicios. Tu satisfacción es nuestra prioridad.</p>
+    <a href="secciones/presupuesto.html" class="btn">Solicitar Presupuesto</a>
 </section>
 
 <footer>
