--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -28,7 +28,7 @@
     <!-- Mapa interactivo embebido -->
     <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.0000000000!2d2.0000000000!3d41.483333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2sCalle+Sant+Jordi%2C+Rub%C3%AD!5e0!3m2!1ses!2ses!4v1700000000000!5m2!1ses!2ses" 
-        width="70%" height="400" style="border:0; border-radius:10px; margin:20px 0;" allowfullscreen="" loading="lazy"></iframe>
+        width="700" height="400" style="border:0; border-radius:10px; margin:20px 0;" allowfullscreen="" loading="lazy"></iframe>
     <p>Dirección: Calle Sant Jordi, Nº 23, Rubí, Barcelona - 08191</p>
     <p>Teléfono: 624082186</p>
     <p>Email: info@electrorubi.com</p>
