--- a/index.html
+++ b/index.html
@@ -1,52 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>ElectroRubí - Inicio</title>
-<link rel="stylesheet" href="css/estilos.css">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/images/icono/favicon-32x32.png">
+    <meta charset="UTF-8">
+    <title>ElectroRubí - Inicio</title>
+    <!-- ===========================
+         HOJA DE ESTILOS Y FAVICON
+         =========================== -->
+    <link rel="stylesheet" href="css/estilos.css"> <!-- CSS principal -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icono/favicon-32x32.png"> <!-- Icono del sitio -->
 </head>
 <body>
 
+<!-- ===========================
+     HEADER / ENCABEZADO
+     =========================== -->
 <header>
+    <!-- Menú de navegación -->
     <nav class="menu">
         <ul>
-            <li><a href="index.html" class="activo">Inicio</a></li>
+            <li><a href="index.html" class="activo">Inicio</a></li> <!-- Página actual -->
             <li><a href="secciones/productos.html">Productos</a></li>
             <li><a href="secciones/presupuesto.html">Presupuesto</a></li>
             <li><a href="secciones/contacto.html">Contacto</a></li>
         </ul>
     </nav>
+
+    <!-- Logo de la empresa -->
     <div class="logo-container">
         <img src="assets/images/logo.png" alt="Logo ElectroRubí">
     </div>
 </header>
 
+<!-- ===========================
+     SECCIÓN DE BIENVENIDA
+     =========================== -->
 <section class="seccion">
     <h1>Bienvenido a ElectroRubí</h1>
     <p>Tu tienda de componentes electrónicos y servicio técnico especializado.</p>
-    <a href="secciones/productos.html" class="btn">Ver Productos</a>
+    <a href="secciones/productos.html" class="btn">Ver Productos</a> <!-- Botón para ver productos -->
 </section>
 
+<!-- ===========================
+     SECCIÓN DE SERVICIOS
+     =========================== -->
 <section class="seccion">
     <h2>Nuestros Servicios</h2>
     <p>Venta de componentes, kits, placas y reparación de circuitos electrónicos. Contamos con atención personalizada para que encuentres justo lo que necesitas.</p>
-    <a href="secciones/contacto.html" class="btn">Contactar Ahora</a>
+    <a href="secciones/contacto.html" class="btn">Contactar Ahora</a> <!-- Botón para contactar -->
 </section>
 
+<!-- ===========================
+     SECCIÓN DE VENTAJAS
+     =========================== -->
 <section class="seccion">
     <h2>Por qué elegirnos</h2>
     <p>Ofrecemos productos originales, soluciones profesionales y garantía en todos nuestros servicios. Tu satisfacción es nuestra prioridad.</p>
-    <a href="secciones/presupuesto.html" class="btn">Solicitar Presupuesto</a>
+    <a href="secciones/presupuesto.html" class="btn">Solicitar Presupuesto</a> <!-- Botón para solicitar presupuesto -->
 </section>
 
+<!-- ===========================
+     FOOTER / PIE DE PÁGINA
+     =========================== -->
 <footer>
+    <!-- Redes sociales -->
     <div class="redes">
         <a href="#"><img src="assets/images/redes/facebook.png" alt="Facebook"></a>
         <a href="#"><img src="assets/images/redes/twitter.png" alt="Twitter"></a>
         <a href="#"><img src="assets/images/redes/instagram.png" alt="Instagram"></a>
     </div>
+
+    <!-- Dirección -->
     <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
+
+    <!-- Aviso legal -->
     <p><a href="secciones/aviso-legal.html">Aviso legal</a></p>
 </footer>
 
