--- a/secciones/aviso-legal.html
+++ b/secciones/aviso-legal.html
@@ -1,38 +1,63 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>ElectroRubí - Aviso Legal</title>
-<link rel="stylesheet" href="../css/estilos.css">
-<link rel="icon" type="image/png" sizes="32x32" href="../assets/images/icono/favicon-32x32.png">
+    <meta charset="UTF-8">
+    <title>ElectroRubí - Aviso Legal</title>
+
+    <!-- ===========================
+         HOJA DE ESTILOS Y FAVICON
+         =========================== -->
+    <link rel="stylesheet" href="../css/estilos.css"> <!-- CSS principal -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/icono/favicon-32x32.png"> <!-- Icono del sitio -->
 </head>
 <body>
 
+<!-- ===========================
+     HEADER / ENCABEZADO
+     =========================== -->
 <header>
-<nav class="menu">
-    <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="presupuesto.html">Presupuesto</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-    </ul>
-</nav>
-<div class="logo-container"><img src="../assets/images/logo.png" alt="Logo ElectroRubí"></div>
+    <!-- Menú de navegación -->
+    <nav class="menu">
+        <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="presupuesto.html">Presupuesto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <!-- Logo de la empresa -->
+    <div class="logo-container">
+        <img src="../assets/images/logo.png" alt="Logo ElectroRubí">
+    </div>
 </header>
 
+<!-- ===========================
+     SECCIÓN DE AVISO LEGAL
+     =========================== -->
 <section class="seccion">
-<h1>Aviso Legal</h1>
-<p>Todos los contenidos de este sitio web son propiedad de ElectroRubí S.L. Queda prohibida su reproducción sin autorización. Cumplimos con la normativa vigente de protección de datos y privacidad.</p>
+    <h1>Aviso Legal</h1>
+    <p>Todos los contenidos de este sitio web son propiedad de ElectroRubí S.L. 
+       Queda prohibida su reproducción sin autorización. Cumplimos con la normativa 
+       vigente de protección de datos y privacidad.</p>
 </section>
 
+<!-- ===========================
+     FOOTER / PIE DE PÁGINA
+     =========================== -->
 <footer>
-<div class="redes">
-    <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
-    <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
-    <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
-</div>
-<p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
-<p><a href="aviso-legal.html">Aviso legal</a></p>
+    <!-- Redes sociales -->
+    <div class="redes">
+        <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
+        <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
+    </div>
+
+    <!-- Dirección -->
+    <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
+
+    <!-- Aviso legal (enlace a la misma página) -->
+    <p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 </body>
