--- a/secciones/presupuesto.html
+++ b/secciones/presupuesto.html
@@ -1,49 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>ElectroRubí - Presupuesto</title>
-<link rel="stylesheet" href="../css/estilos.css">
-<link rel="icon" type="image/png" sizes="32x32" href="../assets/images/icono/favicon-32x32.png">
+    <meta charset="UTF-8">
+    <title>ElectroRubí - Presupuesto</title>
+
+    <!-- ===========================
+         HOJA DE ESTILOS Y FAVICON
+         =========================== -->
+    <link rel="stylesheet" href="../css/estilos.css"> <!-- CSS principal -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/icono/favicon-32x32.png"> <!-- Icono del sitio -->
 </head>
 <body>
     
+<!-- ===========================
+     HEADER / ENCABEZADO
+     =========================== -->
 <header>
-<nav class="menu">
-    <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="presupuesto.html" class="activo">Presupuesto</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-    </ul>
-</nav>
-<div class="logo-container"><img src="../assets/images/logo.png" alt="Logo ElectroRubí"></div>
+    <!-- Menú de navegación -->
+    <nav class="menu">
+        <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="presupuesto.html" class="activo">Presupuesto</a></li> <!-- Página actual -->
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <!-- Logo de la empresa -->
+    <div class="logo-container">
+        <img src="../assets/images/logo.png" alt="Logo ElectroRubí">
+    </div>
 </header>
 
+<!-- ===========================
+     SECCIÓN DE SOLICITUD DE PRESUPUESTO
+     =========================== -->
 <section class="seccion">
-<h1>Solicitar Presupuesto</h1>
-<form>
-    <label>Nombre:</label>
-    <input type="text" required>
-    <label>Email:</label>
-    <input type="email" required>
-    <label>Teléfono:</label>
-    <input type="tel" required pattern="[0-9]{9}">
-    <label>Detalle del pedido:</label>
-    <textarea rows="5" required></textarea>
-    <label><input type="checkbox" required> Acepto la Política de privacidad</label>
-    <button type="submit">Enviar</button>
-</form>
+    <h1>Solicitar Presupuesto</h1>
+
+    <!-- Formulario de presupuesto -->
+    <form>
+        <label>Nombre:</label>
+        <input type="text" required> <!-- Campo obligatorio -->
+
+        <label>Email:</label>
+        <input type="email" required> <!-- Campo obligatorio con validación de email -->
+
+        <label>Teléfono:</label>
+        <input type="tel" required pattern="[0-9]{9}"> <!-- Campo obligatorio, solo 9 números -->
+
+        <label>Detalle del pedido:</label>
+        <textarea rows="5" required></textarea> <!-- Campo obligatorio para descripción del pedido -->
+
+        <label>
+            <input type="checkbox" required> Acepto la Política de privacidad
+        </label> <!-- Checkbox obligatorio -->
+
+        <button type="submit">Enviar</button> <!-- Botón para enviar el formulario -->
+    </form>
 </section>
 
+<!-- ===========================
+     FOOTER / PIE DE PÁGINA
+     =========================== -->
 <footer>
-<div class="redes">
-    <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
-    <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
-    <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
-</div>
-<p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
-<p><a href="aviso-legal.html">Aviso legal</a></p>
+    <!-- Redes sociales -->
+    <div class="redes">
+        <a href="#"><img src="../assets/images/redes/facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="../assets/images/redes/twitter.png" alt="Twitter"></a>
+        <a href="#"><img src="../assets/images/redes/instagram.png" alt="Instagram"></a>
+    </div>
+
+    <!-- Dirección -->
+    <p>Calle Sant Jordi, Rubí, Barcelona - 08191</p>
+
+    <!-- Enlace al aviso legal -->
+    <p><a href="aviso-legal.html">Aviso legal</a></p>
 </footer>
 
 </body>
